@@ -154,15 +154,18 @@ namespace CIAO_CSL_USTest_Sender_Impl
   void
   Sender_exec_i::tick ()
   {
+    ::CSL_US_Connector::Writer_var writer =
+      this->context_->get_connection_test_topic_write_data ();
+
     for (CSL_SRTest_Table::iterator i = this->_ktests_.begin ();
          i != this->_ktests_.end ();
          ++i)
       {
         try
           {
-            if (! ::CORBA::is_nil (this->writer_))
+            if (! ::CORBA::is_nil (writer.in ()))
               {
-                this->writer_->write_one(i->second,::DDS::HANDLE_NIL);
+                writer->write_one(i->second,::DDS::HANDLE_NIL);
                 ACE_DEBUG ((LM_DEBUG, "Written sample: <%C> - <%d>\n",
                   i->first.c_str (),
                   i->second->x));
@@ -204,7 +207,6 @@ namespace CIAO_CSL_USTest_Sender_Impl
   void
   Sender_exec_i::configuration_complete (void)
   {
-    this->writer_  = this->context_->get_connection_test_topic_write_data ();
   }
 
   void
